Changed file name.

--- a/ultracompact.theme.css
+++ b/ultracompact.theme.css
@@ -1,4 +1,4 @@
-/* Theme by Coin-coin le Canapin */
+//META{"name":"Ultra Compact","description":"A compact theme optimized for small windows.","author":"Coin-coin le Canapin","version":"0.1"}*//
 
 /*@media screen and (max-width: 1024px), screen and (max-height: 640px) {*/
 
